Consolidate RadioResolve optimized build updates
Add local playback hold/avoid controls and simplify local playback queue ownership.

Keep Systems/details/spectrum UI controls, P25 conventional separation, SQLite stats maintenance, secure settings storage, and RF/P25 cleanup work together in the deployed optimized build.